<resources>
    <string name="app_name">DogGo</string>

    <string name="progress_text">%1$s/%2$s%3$s</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="loginPage_string1">Login to your account</string>
    <string name="loginPage_string2">Enter your email and password to login </string>
    <string name="loginPage_EmailEditTextHide">Email…</string>
    <string name="loginPage_loginButton">Login</string>
    <string name="loginPage_continueWithGoogleButton">Continue with Google</string>
    <string name="loginPage_continueWithAppleButton">Continue with Apple</string>
    <string name="loginPage_or">or</string>
    <string name="loginPage_image_content_description">logo</string>
    <string name="loginPage_terms_and_policy_signup">By clicking Signup, you agree to our Terms of Service and Privacy Policy</string>
    <string name="EdtTextLoginPassword">Password</string>
    <string name="loginPage_registrationButton">Not a member? SignUp</string>
    <string name="loginPage_registrationButton_clickable">SignUp</string>

    <string name="registrationPage_string1">Create an account</string>
    <string name="registrationPage_string2">Enter your data to sign up for this app</string>
    <string name="registrationPage_loginButton">Already a member? Login</string>
    <string name="registrationPage_loginButton_clickable">Login</string>


    <string name="registrationPage_NameEditTextHide">Name…</string>
    <string name="registrationPage_SurnameEditTextHide">Surname…</string>
    <string name="registrationPage_BirthdateEditTextHide">Birthdate…</string>
    <string name="registrationPage_EmailEditTextHide">Email…</string>
    <string name="registrationPage_PasswordEditTextHide">Password…</string>
    <string name="registrationPage_ConfirmPasswordEditTextHide">Confirm password…</string>
    <string name="logout">Logout</string>

    <string name="default_web_client_id">tuo-id.apps.googleusercontent.com</string>
    <string name="EdtTextLoginConfirmPassword">Confirm password…</string>

    <string name="settings">Settings</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="overall_medals">Overall medals</string>
    <string name="spend_points">Spend Points</string>

    <string name="hours_event">Hours (hh:mm)</string>
    <string name="event_description">Event description</string>
    <string name="event_title">Event title</string>

    <string name="name_prize">Name prize</string>
    <string name="description_prize">Description</string>
    <string name="threshold_prize">Threshold</string>

    <string name="collected_rewards">Collected Rewards</string>
    <string name="available_rewards">Available Rewards</string>
    <string name="overall_awards">Overall awards</string>

</resources>