<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/login_page_bg"
    tools:context=".Login">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:background="@drawable/login_page_bg"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        tools:context=".Login"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingBottom="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="70dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/loginPage_image_content_description"
                android:src="@drawable/logo"

                />
            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/myBlack"
                android:text="@string/app_name"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginPage_string1"
            android:textColor="@color/myBlack"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginPage_string2"
            android:textColor="@color/myBlack"
            android:textAlignment="center"
            android:textSize="14sp"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrationPage_EmailEditTextHide"
                android:inputType="textEmailAddress"
                android:background="@drawable/edit_text_bg"
                android:textColor="#000000"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registrationPage_PasswordEditTextHide"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_bg"
                android:textColor="#000000"
                android:textSize="15sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_black_bg"
            android:text="@string/loginPage_loginButton"
            android:textAllCaps="false"
            android:textColor="@color/myWhite"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#CCCCCC" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginPage_or"
                android:textColor="#888888"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="17sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="#CCCCCC" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/button_gray_bg"
            >
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/google24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginPage_continueWithGoogleButton"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/myBlack"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#CCCCCC" />


        <TextView
            android:id="@+id/btn_registration_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="REGISTRATION SECTION"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:textSize="12sp"
            android:textColor="@color/myGrayDark"/>





    </LinearLayout>
</ScrollView>



